package edu.hitsz.observer;

public interface Subscriber {
    void update();
}
